Update SinglyLinkedList